test/files/neg/t5529.check
t5529.scala:12: error: File is already defined as class File
  type File
       ^
t5529.scala:10: error: class type required but test.Test.File found
  sealed class Dir extends File { }
                           ^
two errors found
